--- a/package.json
+++ b/package.json
@@ -13,15 +13,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-analytics/data": "^3.2.1",
+    "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
     "express-validator": "^6.15.0",
+    "googleapis": "^114.0.0",
+    "graphql": "^16.6.0",
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.3"
+    "mongoose": "^7.0.3",
+    "speakeasy": "^2.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
