--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,10 +7,11 @@
     // "preserveSymlinks": true,                         /* Disable resolving symlinks to their realpath. This correlates to the same flag in node. */
     "forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */,
     /* Type Checking */
+    "sourceMap": true,
     "strict": false /* Enable all strict type-checking options. */,
     "skipLibCheck": true /* Skip type checking all .d.ts files. */,
     "moduleResolution": "node",
-
+    // "--module": "nodenext",
     "resolveJsonModule": true,
     "types": ["node"],
     "baseUrl": ".",
