Updated analytics data being sent to client.

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/index.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
+    "start": "cross-env NODE_ENV=production node -r dotenv/config dist/index.js",
+    "dev": "cross-env NODE_ENV=local concurrently \"npx tsc --watch\" \"nodemon -r dotenv/config -q dist/index.js\"",
     "build": "npx tsc"
   },
   "keywords": [],
@@ -17,6 +17,7 @@
     "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
